--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <template>
-  <require from="./assets/custom.css"></require>
+  <require from="./app.css"></require>
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">
       <img src="../images/banner.png" width="170" height="30" class="d-inline-block align-top" alt="">
