Using dialog instead of Modal boostrap

--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
   <div class="container-fluid">
     <router-view class="col-12"></router-view>
   </div>
-  <!-- <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator> -->
-  <loading-indicator loading.bind="router.isNavigating"></loading-indicator>
+  <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
+  <!-- <loading-indicator loading.bind="router.isNavigating"></loading-indicator> -->
 </template>
