--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -55,6 +55,7 @@
       </tr>
     </tbody>
   </table>
+  <!-- <aup-pagination input-class="form-control input-page" text-class="btn btn-light font-weight-bold disabled" select-class="custom-select d-none" button-class="btn btn-outline-secondary" current-page.bind="currentPage" page-size.bind="pageSize" page-sizes.bind="pageSizes" total-items.bind="totalItems"></aup-pagination> -->
   <div class="row justify-content-sm-center">
     <div class="col-sm-4">
       <button type="button" class="btn btn-primary btn-lg btn-block" click.delegate="openEmailModal()">Send email</button>
