--- a/src/app.html
+++ b/src/app.html
@@ -11,3 +11,5 @@
   </div>
   <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
 </template>
+<div>
+</div>
