--- a/src/app.html
+++ b/src/app.html
@@ -11,4 +11,4 @@
   </div>
   <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
 </template>
-<div class="asd"></div>
+<div class="asd">asdasdas</div>
